--- a/index.html
+++ b/index.html
@@ -7,12 +7,62 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>Movie App</title>
 </head>
 <body>
-    <h1>Project starter</h1>
-    <h2>Hi</h2>
-    <h2>Hi</h2>
+    <header>
+        <form id="form">
+            <input type="text" id = "search" class = "search" placeholder="Search">
+        </form>
+    </header>
+    <main id = "main">
+        <div class="movie"> 
+            <img src="https://images.unsplash.com/photo-1574267432553-4b4628081c31?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+             alt="">
+             <div class="movie-info">
+                <h3>Movie title</h3>
+                <span class="green">9.5</span>
+             </div>
+             <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 In eum numquam nobis ex dolor, quia quam beatae commodi modi, 
+                 eius odio esse qui, magni repellendus! Unde deserunt expedita 
+                 fugit consequuntur!
+             </div>
+        </div>
+        <div class="movie"> 
+            <img src="https://images.unsplash.com/photo-1574267432553-4b4628081c31?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+             alt="">
+             <div class="movie-info">
+                <h3>Movie title</h3>
+                <span class="green">9.5</span>
+             </div>
+             <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 In eum numquam nobis ex dolor, quia quam beatae commodi modi, 
+                 eius odio esse qui, magni repellendus! Unde deserunt expedita 
+                 fugit consequuntur!
+             </div>
+        </div>
+        
+        <div class="movie"> 
+            <img src="https://images.unsplash.com/photo-1574267432553-4b4628081c31?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+             alt="">
+             <div class="movie-info">
+                <h3>Movie title</h3>
+                <span class="green">9.5</span>
+             </div>
+             <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 In eum numquam nobis ex dolor, quia quam beatae commodi modi, 
+                 eius odio esse qui, magni repellendus! Unde deserunt expedita 
+                 fugit consequuntur!
+             </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
