--- a/index.html
+++ b/index.html
@@ -15,54 +15,7 @@
             <input type="text" id = "search" class = "search" placeholder="Search">
         </form>
     </header>
-    <main id = "main">
-        <div class="movie"> 
-            <img src="https://images.unsplash.com/photo-1574267432553-4b4628081c31?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-             alt="">
-             <div class="movie-info">
-                <h3>Movie title</h3>
-                <span class="green">9.5</span>
-             </div>
-             <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 In eum numquam nobis ex dolor, quia quam beatae commodi modi, 
-                 eius odio esse qui, magni repellendus! Unde deserunt expedita 
-                 fugit consequuntur!
-             </div>
-        </div>
-        <div class="movie"> 
-            <img src="https://images.unsplash.com/photo-1574267432553-4b4628081c31?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-             alt="">
-             <div class="movie-info">
-                <h3>Movie title</h3>
-                <span class="green">9.5</span>
-             </div>
-             <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 In eum numquam nobis ex dolor, quia quam beatae commodi modi, 
-                 eius odio esse qui, magni repellendus! Unde deserunt expedita 
-                 fugit consequuntur!
-             </div>
-        </div>
-        
-        <div class="movie"> 
-            <img src="https://images.unsplash.com/photo-1574267432553-4b4628081c31?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-             alt="">
-             <div class="movie-info">
-                <h3>Movie title</h3>
-                <span class="green">9.5</span>
-             </div>
-             <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 In eum numquam nobis ex dolor, quia quam beatae commodi modi, 
-                 eius odio esse qui, magni repellendus! Unde deserunt expedita 
-                 fugit consequuntur!
-             </div>
-        </div>
-    </main>
+    <main id = "main">                  </main>
     <script src="script.js"></script>
 </body>
 </html>
